# programowanie_kurs

./: ._fib_plot.ipynb  .excalidraw  .gitignore  L1.py  README.md  dual_example.py  dual_numbers.py  fib.py  fib_plot.ipynb  function_example.py  function_hierarchy.py  game_of_life.py  lista_1.ipynb  lista_2.py  numpy_example.py  pygame_example.py  pyproject.toml  ruff.toml  ruff_example.py
lab_0/: fibonacci_czwartek.py  fibonacci_poniedzialek.py
lab_1/: .excalidraw  fibonacci_czwartek.py  fibonacci_wtorek.py
lista_1/: L1.py  L1Z1.py  lista_1.ipynb  notebook_lista1.ipynb  test.py
lista_2/: lista_2.py  numpy_example.py
lista_3/: lista_3.py
lista_4/: lista4.py  logowanie.py
lista_5/: lista_5.py
